--- a/AddressBookApp/AddressBookApp/Base.lproj/Main.storyboard
+++ b/AddressBookApp/AddressBookApp/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="contactCell" rowHeight="90" id="cLZ-hw-8ed">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="addressCell" rowHeight="90" id="cLZ-hw-8ed" customClass="AddressTableViewCell" customModule="AddressBookApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cLZ-hw-8ed" id="657-Mp-Psi">
@@ -67,6 +67,12 @@
                                         <constraint firstAttribute="trailing" secondItem="Qak-1U-HFJ" secondAttribute="trailing" id="zPO-sI-CB7"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="emailLabel" destination="WOA-TP-dfq" id="WIW-d8-VzV"/>
+                                    <outlet property="nameLabel" destination="6Ve-63-K8X" id="8JT-t8-PQt"/>
+                                    <outlet property="profile" destination="cja-6r-0HW" id="oh9-5H-ucB"/>
+                                    <outlet property="telLabel" destination="OOS-Qj-ol2" id="1rk-pJ-egP"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
