--- a/AddressBookApp/AddressBookApp/Base.lproj/Main.storyboard
+++ b/AddressBookApp/AddressBookApp/Base.lproj/Main.storyboard
@@ -28,35 +28,49 @@
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qak-1U-HFJ">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="90.333333333333329"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cja-6r-0HW">
-                                                    <rect key="frame" x="-6" y="-19" width="240" height="128"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cja-6r-0HW">
+                                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90.333333333333329"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="cja-6r-0HW" secondAttribute="height" id="7wg-2R-WBs"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Ve-63-K8X">
-                                                    <rect key="frame" x="268" y="7" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="김수한무" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Ve-63-K8X">
+                                                    <rect key="frame" x="98" y="8.3333333333333321" width="84" height="49.333333333333343"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OOS-Qj-ol2">
-                                                    <rect key="frame" x="343" y="7" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="abc@abcdef.com" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WOA-TP-dfq">
+                                                    <rect key="frame" x="98" y="57.666666666666664" width="308" height="24.666666666666664"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WOA-TP-dfq">
-                                                    <rect key="frame" x="301" y="61" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="+82-070-4117-1005" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OOS-Qj-ol2">
+                                                    <rect key="frame" x="190" y="8.3333333333333321" width="208" height="49.333333333333343"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
+                                                <constraint firstItem="cja-6r-0HW" firstAttribute="top" secondItem="Qak-1U-HFJ" secondAttribute="top" id="3bh-bR-3A3"/>
+                                                <constraint firstItem="WOA-TP-dfq" firstAttribute="top" secondItem="OOS-Qj-ol2" secondAttribute="bottom" id="4bZ-P1-Ohj"/>
+                                                <constraint firstItem="WOA-TP-dfq" firstAttribute="top" secondItem="6Ve-63-K8X" secondAttribute="bottom" id="Aov-IF-mu8"/>
                                                 <constraint firstAttribute="height" constant="90" id="DBD-1L-CLN"/>
+                                                <constraint firstItem="6Ve-63-K8X" firstAttribute="leading" secondItem="cja-6r-0HW" secondAttribute="trailing" constant="8" id="Gfm-ZF-6be"/>
+                                                <constraint firstItem="OOS-Qj-ol2" firstAttribute="leading" secondItem="6Ve-63-K8X" secondAttribute="trailing" constant="8" id="Ggh-fd-dJK"/>
+                                                <constraint firstAttribute="trailing" secondItem="OOS-Qj-ol2" secondAttribute="trailing" constant="16" id="Glt-nh-GKK"/>
+                                                <constraint firstAttribute="trailing" secondItem="WOA-TP-dfq" secondAttribute="trailing" constant="8" id="NmX-La-b9Z"/>
+                                                <constraint firstAttribute="bottom" secondItem="WOA-TP-dfq" secondAttribute="bottom" constant="8" id="S4h-OK-LYb"/>
+                                                <constraint firstItem="OOS-Qj-ol2" firstAttribute="height" secondItem="6Ve-63-K8X" secondAttribute="height" id="e1K-fl-Oai"/>
+                                                <constraint firstItem="6Ve-63-K8X" firstAttribute="height" secondItem="WOA-TP-dfq" secondAttribute="height" multiplier="2" id="hhj-Yu-And"/>
+                                                <constraint firstItem="OOS-Qj-ol2" firstAttribute="top" secondItem="Qak-1U-HFJ" secondAttribute="top" constant="8" id="j7l-j2-h86"/>
+                                                <constraint firstItem="6Ve-63-K8X" firstAttribute="top" secondItem="Qak-1U-HFJ" secondAttribute="top" constant="8" id="qwT-44-FSz"/>
+                                                <constraint firstItem="cja-6r-0HW" firstAttribute="leading" secondItem="Qak-1U-HFJ" secondAttribute="leading" id="xLo-Jf-GII"/>
+                                                <constraint firstAttribute="bottom" secondItem="cja-6r-0HW" secondAttribute="bottom" id="xng-t9-YTM"/>
+                                                <constraint firstItem="WOA-TP-dfq" firstAttribute="leading" secondItem="cja-6r-0HW" secondAttribute="trailing" constant="8" id="ygv-g7-imC"/>
                                             </constraints>
                                         </view>
                                     </subviews>
@@ -86,7 +100,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZZ9-wU-lfc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="133" y="-22"/>
+            <point key="canvasLocation" x="131.8840579710145" y="-22.010869565217394"/>
         </scene>
     </scenes>
 </document>
